ensure to hide overflow

--- a/public/nav.css
+++ b/public/nav.css
@@ -1,21 +1,15 @@
 .nav {
   position: absolute;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100vw;
-  height: 4rem;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  gap: 1rem;
   display: flex;
   align-items: center;
   background: #323232;
   color: white;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.flex-container {
-  padding-left: 20px;
-  display: flex;
-  gap: 1rem;
 }
 
 .nav-button {
@@ -31,7 +25,6 @@
   color: #d1b3ff;
   letter-spacing: 3px;
 }
-
 
 .user-button,
 .wishlist-button {
@@ -49,13 +42,21 @@
 }
 
 .icon-group {
-  margin-left: 84%;
+  overflow: hidden;
+  position: absolute;
+  padding-right: 20px;
+  right: 0;
+  display: flex;
+  align-items: center;
+
+  
 }
 
 .icon {
   height: 1.25rem;
   width: 1.25rem;
 }
+
 
 /* profile & wishlist hover text */
 
